package p01_simple_factory;

public interface Hero {
    void qSkill();

    void wSkill();

    void eSkill();

    void rSkill();

    void show();
}